# Timy

./: README.md  timy.code-workspace
timy-backend/: .gitignore  converting.py  main.py  pyproject.toml  requirements.txt  vercel.json
timy-backend/src/: main.py
timy-backend/tests/: tests.py
timy-backend/utils/: converting.py
timy-frontend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sign.txt
timy-frontend/src/: main.py
