[project]
name = "Timy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Guilhermwn", email = "guilhermwn.franco@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "requests>=2.32.4",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.guilhermwn.timy"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Timy"

# company name to display in about app dialogs
company = "Guilhermwn"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Guilhermwn"

[tool.flet.app]
path = "src"

[tool.flet.android]
split_per_abi = true

[tool.flet.android.signing]
key_store = "C:/Users/Guilherme/Projects/Github/timy/timy-frontend/store.jks"
key_alias = "timysignkey"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
